--- a/password.html
+++ b/password.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./normalize.css">
-    <title>Login</title>
+    <title>Reset Password</title>
     <style>
         .login {
             width: 100%;
@@ -69,52 +69,29 @@
             border: 1px solid var(--text-input-field);
         }
 
-        .btn {
+        .primary-btn {
+            background: var(--hospital-green);
+            color: var(--white);
             border: 1px solid var(--hospital-green);
             border-radius: 10px;
-            padding: 14px;
+            padding: var(--text-lg);
             box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.0001);
             cursor: pointer;
         }
 
-        .primary-btn {
-            background: var(--hospital-green);
-            color: var(--white);
-        }
-
-        .secondary-btn {
-            background: transparent;
-            color: var(--hospital-green);
-            margin-top: 3em;
-        }
-
         .login-btn {
             margin-top: 14px;
-            margin-bottom: 8px;
+            margin-bottom: 30px;
         }
 
         .primary-btn:active {
             transform: scale(0.9);
         }
 
-        .forgot {
-            color: var(--hospital-green);
-            font-size: var(--text-sm);
-            text-decoration: none;
-            text-align: center;
-        }
-
         /* Responsive */
         @media (max-width:640px) {
             .logo {
                 display: block;
-            }
-
-            .secondary-btn {
-                position: absolute;
-                width: 300px;
-                bottom: 0;
-                margin-bottom: 25px;
             }
         }
     </style>
@@ -124,19 +101,19 @@
     <div class="login">
         <div class="form-container">
             <img src="./images/logos/logo_yard_sale.svg" alt="logo yard sale" class="logo">
+            <h1 class="title">Create a new passwpord</h1>
+            <p class="subtitle">Enter a new password for your account</p>
             <form action="/" class="form">
                 <label class="label">
-                    Email address
-                    <input type="email" placeholder="youremail@gmail.com" class="input input-password" id="password">
+                    Password
+                    <input type="password" placeholder="********" class="input input-password" id="password">
                 </label>
                 <label class="label">
                     Re-enter password
                     <input type="password" placeholder="********" class="input input-password" id="new-password">
                 </label>
-                <input type="button" value="Log in" class="primary-btn login-btn btn">
-                <a href="/" class="forgot">Forgot my password</a>
+                <input type="button" value="Confirm" class="primary-btn login-btn">
             </form>
-            <button class="btn secondary-btn">Sign up</button>
         </div>
     </div>
 </body>
