--- a/create-account.html
+++ b/create-account.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./normalize.css">
-    <title>Login</title>
+    <title>Create account</title>
     <style>
         .login {
             width: 100%;
@@ -26,6 +26,13 @@
             justify-self: center;
             margin-bottom: 48px;
             display: none;
+        }
+
+        .title {
+            color: var(--black);
+            font-size: var(--text-lg);
+            margin-bottom: 42px;
+            font-weight: bold;
         }
 
 
@@ -66,12 +73,6 @@
             color: var(--white);
         }
 
-        .secondary-btn {
-            background: transparent;
-            color: var(--hospital-green);
-            margin-top: 3em;
-        }
-
         .login-btn {
             margin-top: 14px;
             margin-bottom: 8px;
@@ -81,12 +82,7 @@
             transform: scale(0.9);
         }
 
-        .forgot {
-            color: var(--hospital-green);
-            font-size: var(--text-sm);
-            text-decoration: none;
-            text-align: center;
-        }
+
 
         /* Responsive */
         @media (max-width:640px) {
@@ -94,11 +90,11 @@
                 display: block;
             }
 
-            .secondary-btn {
+            .login-btn {
                 position: absolute;
-                width: 300px;
                 bottom: 0;
                 margin-bottom: 25px;
+                width: 300px;
             }
         }
     </style>
@@ -108,19 +104,22 @@
     <div class="login">
         <div class="form-container">
             <img src="./images/logos/logo_yard_sale.svg" alt="logo yard sale" class="logo">
+            <h1 class="title">My account</h1>
             <form action="/" class="form">
                 <label class="label">
-                    Email address
-                    <input type="email" placeholder="youremail@gmail.com" class="input input-password" id="email">
+                    Name
+                    <input type="text" placeholder="your name" class="input input-password" id="name">
                 </label>
                 <label class="label">
+                    Email address
+                    <input type="email" placeholder="youremail@gmail.com" class="input input-password" id="email>
+                </label>
+                <label class=" label">
                     password
                     <input type="password" placeholder="********" class="input input-password" id="password">
                 </label>
-                <input type="button" value="Log in" class="primary-btn login-btn btn">
-                <a href="/" class="forgot">Forgot my password</a>
+                <input type="button" value="Save" class="primary-btn login-btn btn">
             </form>
-            <button class="btn secondary-btn">Sign up</button>
         </div>
     </div>
 </body>
