fusion component navbar,menu-dek. js and css intration

--- a/menu-desk.html
+++ b/menu-desk.html
@@ -48,7 +48,7 @@
 </head>
 
 <body>
-    <div class="desk-menu">
+    <div class="desk-menu" id="desk-menu">
         <ul class="desk-menu__content">
             <li class="desk-menu__tite"><a href="/" class="desk-menu__link">My orders</a></li>
             <li class="desk-menu__tite"><a href="/" class="desk-menu__link">My account</a></li>
