--- a/fusion.html
+++ b/fusion.html
@@ -13,7 +13,7 @@
 <body>
     <header class="header">
         <nav class="navbar">
-            <img class="icon-menu" src="./images/icons/icon_menu.svg" alt="icon menu">
+            <img id="icon-burger" class="icon-menu" src="./images/icons/icon_menu.svg" alt="icon menu">
             <div class="navbar-content">
                 <img src="./images/logos/logo_yard_sale.svg" alt="logo yard sale" class="logo">
                 <ul class="navbar-items">
@@ -57,6 +57,26 @@
             <li class="desk-menu__tite"><a href="/" class="desk-menu__link">My orders</a></li>
             <li class="desk-menu__tite"><a href="/" class="desk-menu__link">My account</a></li>
             <li class="desk-menu__tite"><a href="/" class="desk-menu__link">Sing out</a></li>
+        </ul>
+    </div>
+    <div class="mobil-menu" id="mobil-menu">
+        <img src="./images/icons/icon_close.png" alt="icon close" class="icon-close">
+        <h2 class="menu-title">Categories</h2>
+        <ul class="mobil-menu__content">
+            <li class="mobil-menu__tite"><a href="/" class="mobil-menu__link">All</a></li>
+            <li class="mobil-menu__tite"><a href="/" class="mobil-menu__link">Clothes</a></li>
+            <li class="mobil-menu__tite"><a href="/" class="mobil-menu__link">Electronics</a></li>
+            <li class="mobil-menu__tite"><a href="/" class="mobil-menu__link">Furniture</a></li>
+            <li class="mobil-menu__tite"><a href="/" class="mobil-menu__link">Toys</a></li>
+            <li class="mobil-menu__tite"><a href="/" class="mobil-menu__link">Others</a></li>
+        </ul>
+        <ul class="mobil-menu__content2">
+            <li class="mobil-menu__tite2"><a href="/" class="mobil-menu__link2">My orders</a></li>
+            <li class="mobil-menu__tite2"><a href="/" class="mobil-menu__link2">My account</a></li>
+        </ul>
+        <ul class="mobil-menu__content3">
+            <li class="mobil-menu__tite3"><a href="/" class="mobil-menu__link3">YourEmail@gmail.com</a></li>
+            <li class="mobil-menu__tite3"><a href="/" class="mobil-menu__link3">Sing out</a></li>
         </ul>
     </div>
     <script src="./js/script.js"></script>
