shopping cart and menus

--- a/fusion.html
+++ b/fusion.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shop Practice Frontend</title>
     <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/media.css">
     <link rel="stylesheet" href="normalize.css">
 </head>
 
@@ -79,6 +80,107 @@
             <li class="mobil-menu__tite3"><a href="/" class="mobil-menu__link3">Sing out</a></li>
         </ul>
     </div>
+    <aside class="shopping-cart">
+        <div class="order-content">
+            <div class="order-title__content">
+                <img src="./images/icons/flechita.svg" alt="arrow">
+
+                <h2 class="order-title">Shopping Cart</h2>
+
+            </div>
+            <div class="cards-order">
+                <div class="card-order">
+                    <div class="card-order__product">
+                        <figure class="card-order__img">
+                            <img src="https://images.unsplash.com/photo-1607034071833-18a5b64047ac?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80"
+                                alt="Pc gamer">
+                        </figure>
+                        <p class="card-order__title">
+                            Pc Gamer
+                        </p>
+                    </div>
+                    <div class="card-order__price">
+                        <p class="card-order__prices">$120,00</p>
+                        <img src="./images/icons/icon_close.png" alt="icon close">
+                    </div>
+                </div>
+                <div class="card-order">
+                    <div class="card-order__product">
+                        <figure class="card-order__img">
+                            <img src="https://images.unsplash.com/photo-1607034071833-18a5b64047ac?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80"
+                                alt="Pc gamer">
+                        </figure>
+                        <p class="card-order__title">
+                            Pc Gamer
+                        </p>
+                    </div>
+                    <div class="card-order__price">
+                        <p class="card-order__prices">$120,00</p>
+                        <img src="./images/icons/icon_close.png" alt="icon close">
+                    </div>
+                </div>
+                <div class="card-order">
+                    <div class="card-order__product">
+                        <figure class="card-order__img">
+                            <img src="https://images.unsplash.com/photo-1607034071833-18a5b64047ac?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80"
+                                alt="Pc gamer">
+                        </figure>
+                        <p class="card-order__title">
+                            Pc Gamer
+                        </p>
+                    </div>
+                    <div class="card-order__price">
+                        <p class="card-order__prices">$120,00</p>
+                        <img src="./images/icons/icon_close.png" alt="icon close">
+                    </div>
+                </div>
+                <div class="card-order">
+                    <div class="card-order__product">
+                        <figure class="card-order__img">
+                            <img src="https://images.unsplash.com/photo-1607034071833-18a5b64047ac?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80"
+                                alt="Pc gamer">
+                        </figure>
+                        <p class="card-order__title">
+                            Pc Gamer
+                        </p>
+                    </div>
+                    <div class="card-order__price">
+                        <p class="card-order__prices">$120,00</p>
+                        <img src="./images/icons/icon_close.png" alt="icon close">
+                    </div>
+                </div>
+                <div class="card-order">
+                    <div class="card-order__product">
+                        <figure class="card-order__img">
+                            <img src="https://images.unsplash.com/photo-1607034071833-18a5b64047ac?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80"
+                                alt="Pc gamer">
+                        </figure>
+                        <p class="card-order__title">
+                            Pc Gamer
+                        </p>
+                    </div>
+                    <div class="card-order__price">
+                        <p class="card-order__prices">$120,00</p>
+                        <img src="./images/icons/icon_close.png" alt="icon close">
+                    </div>
+                </div>
+            </div>
+            <div class="order-info">
+                <div class="order-info__date">
+                    <p class="order-info__date">
+                        Total
+                    </p>
+
+                </div>
+                <p class="order-info__prices">
+                    $560.00
+                </p>
+            </div>
+            <button class="card-order__btn">
+                checkout
+            </button>
+        </div>
+    </aside>
     <script src="./js/script.js"></script>
 </body>
 
