--- a/fusion.html
+++ b/fusion.html
@@ -13,174 +13,181 @@
 
 <body>
     <header class="header">
-        <nav class="navbar">
-            <img id="icon-burger" class="icon-menu" src="./images/icons/icon_menu.svg" alt="icon menu">
-            <div class="navbar-content">
-                <img src="./images/logos/logo_yard_sale.svg" alt="logo yard sale" class="logo">
-                <ul class="navbar-items">
-                    <a href="/" class="navbar-item__link">
-                        <li class="navbar-item">All</li>
-                    </a>
-                    <a href="/" class="navbar-item__link">
-                        <li class="navbar-item">Clothes</li>
-                    </a>
-                    <a href="/" class="navbar-item__link">
-                        <li class="navbar-item">Electronics</li>
-                    </a>
-                    <a href="/" class="navbar-item__link">
-                        <li class="navbar-item">Furniture</li>
-                    </a>
-                    <a href="/" class="navbar-item__link">
-                        <li class="navbar-item">Toys</li>
-                    </a>
-                    <a href="/" class="navbar-item__link">
-                        <li class="navbar-item">Others</li>
-                    </a>
+        <nav>
+            <div class="navbar">
+                <img id="icon-burger" class="icon-menu" src="./images/icons/icon_menu.svg" alt="icon menu">
+                <div class="navbar-content">
+                    <img src="./images/logos/logo_yard_sale.svg" alt="logo yard sale" class="logo">
+                    <ul class="navbar-items">
+                        <a href="/" class="navbar-item__link">
+                            <li class="navbar-item">All</li>
+                        </a>
+                        <a href="/" class="navbar-item__link">
+                            <li class="navbar-item">Clothes</li>
+                        </a>
+                        <a href="/" class="navbar-item__link">
+                            <li class="navbar-item">Electronics</li>
+                        </a>
+                        <a href="/" class="navbar-item__link">
+                            <li class="navbar-item">Furniture</li>
+                        </a>
+                        <a href="/" class="navbar-item__link">
+                            <li class="navbar-item">Toys</li>
+                        </a>
+                        <a href="/" class="navbar-item__link">
+                            <li class="navbar-item">Others</li>
+                        </a>
+                    </ul>
+                </div>
+                <div class="navbar-content">
+                    <li class="email" id="email-menu">
+                        <p>
+                            yourEmail@gmail.com
+                        </p>
+                        <img id="icon-arrow" class="icon-arrow" src="./images/icons/flechita.svg" alt="icon arrow">
+                    </li>
+                    <div class="navbar-icon__cart">
+                        <img class="icon-shopping-notification" src="./images/icons/icon_shopping_cart.svg"
+                            alt="icon shopping notification">
+                        <p class="count-car">6</p>
+                    </div>
+                </div>
+            </div>
+            <div class="desk-menu" id="desk-menu">
+                <ul class="desk-menu__content">
+                    <li class="desk-menu__tite"><a href="/" class="desk-menu__link">My orders</a></li>
+                    <li class="desk-menu__tite"><a href="/" class="desk-menu__link">My account</a></li>
+                    <li class="desk-menu__tite"><a href="/" class="desk-menu__link">Sing out</a></li>
                 </ul>
             </div>
-            <div class="navbar-content">
-                <li class="email" id="email-menu">
-                    <p>
-                        yourEmail@gmail.com
-                    </p>
-                    <img id="icon-arrow" class="icon-arrow" src="./images/icons/flechita.svg" alt="icon arrow">
-                </li>
-                <div class="navbar-icon__cart">
-                    <img class="icon-shopping-notification" src="./images/icons/icon_shopping_cart.svg"
-                        alt="icon shopping notification">
-                    <p class="count-car">6</p>
-                </div>
+            <div class="mobil-menu" id="mobil-menu">
+                <img src="./images/icons/icon_close.png" alt="icon close" class="icon-close">
+                <h2 class="menu-title">Categories</h2>
+                <ul class="mobil-menu__content">
+                    <li class="mobil-menu__tite"><a href="/" class="mobil-menu__link">All</a></li>
+                    <li class="mobil-menu__tite"><a href="/" class="mobil-menu__link">Clothes</a></li>
+                    <li class="mobil-menu__tite"><a href="/" class="mobil-menu__link">Electronics</a></li>
+                    <li class="mobil-menu__tite"><a href="/" class="mobil-menu__link">Furniture</a></li>
+                    <li class="mobil-menu__tite"><a href="/" class="mobil-menu__link">Toys</a></li>
+                    <li class="mobil-menu__tite"><a href="/" class="mobil-menu__link">Others</a></li>
+                </ul>
+                <ul class="mobil-menu__content2">
+                    <li class="mobil-menu__tite2"><a href="/" class="mobil-menu__link2">My orders</a></li>
+                    <li class="mobil-menu__tite2"><a href="/" class="mobil-menu__link2">My account</a></li>
+                </ul>
+                <ul class="mobil-menu__content3">
+                    <li class="mobil-menu__tite3"><a href="/" class="mobil-menu__link3">YourEmail@gmail.com</a></li>
+                    <li class="mobil-menu__tite3"><a href="/" class="mobil-menu__link3">Sing out</a></li>
+                </ul>
             </div>
         </nav>
     </header>
-    <div class="desk-menu" id="desk-menu">
-        <ul class="desk-menu__content">
-            <li class="desk-menu__tite"><a href="/" class="desk-menu__link">My orders</a></li>
-            <li class="desk-menu__tite"><a href="/" class="desk-menu__link">My account</a></li>
-            <li class="desk-menu__tite"><a href="/" class="desk-menu__link">Sing out</a></li>
-        </ul>
-    </div>
-    <div class="mobil-menu" id="mobil-menu">
-        <img src="./images/icons/icon_close.png" alt="icon close" class="icon-close">
-        <h2 class="menu-title">Categories</h2>
-        <ul class="mobil-menu__content">
-            <li class="mobil-menu__tite"><a href="/" class="mobil-menu__link">All</a></li>
-            <li class="mobil-menu__tite"><a href="/" class="mobil-menu__link">Clothes</a></li>
-            <li class="mobil-menu__tite"><a href="/" class="mobil-menu__link">Electronics</a></li>
-            <li class="mobil-menu__tite"><a href="/" class="mobil-menu__link">Furniture</a></li>
-            <li class="mobil-menu__tite"><a href="/" class="mobil-menu__link">Toys</a></li>
-            <li class="mobil-menu__tite"><a href="/" class="mobil-menu__link">Others</a></li>
-        </ul>
-        <ul class="mobil-menu__content2">
-            <li class="mobil-menu__tite2"><a href="/" class="mobil-menu__link2">My orders</a></li>
-            <li class="mobil-menu__tite2"><a href="/" class="mobil-menu__link2">My account</a></li>
-        </ul>
-        <ul class="mobil-menu__content3">
-            <li class="mobil-menu__tite3"><a href="/" class="mobil-menu__link3">YourEmail@gmail.com</a></li>
-            <li class="mobil-menu__tite3"><a href="/" class="mobil-menu__link3">Sing out</a></li>
-        </ul>
-    </div>
-    <aside class="shopping-cart">
-        <div class="order-content">
-            <div class="order-title__content">
-                <img src="./images/icons/flechita.svg" alt="arrow">
+    <main>
+        <aside class="shopping-cart">
+            <div class="order-content">
+                <div class="order-title__content">
+                    <img src="./images/icons/flechita.svg" alt="arrow">
 
-                <h2 class="order-title">Shopping Cart</h2>
+                    <h2 class="order-title">Shopping Cart</h2>
 
-            </div>
-            <div class="cards-order">
-                <div class="card-order">
-                    <div class="card-order__product">
-                        <figure class="card-order__img">
-                            <img src="https://images.unsplash.com/photo-1607034071833-18a5b64047ac?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80"
-                                alt="Pc gamer">
-                        </figure>
-                        <p class="card-order__title">
-                            Pc Gamer
-                        </p>
+                </div>
+                <div class="cards-order">
+                    <div class="card-order">
+                        <div class="card-order__product">
+                            <figure class="card-order__img">
+                                <img src="https://images.unsplash.com/photo-1607034071833-18a5b64047ac?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80"
+                                    alt="Pc gamer">
+                            </figure>
+                            <p class="card-order__title">
+                                Pc Gamer
+                            </p>
+                        </div>
+                        <div class="card-order__price">
+                            <p class="card-order__prices">$120,00</p>
+                            <img src="./images/icons/icon_close.png" alt="icon close">
+                        </div>
                     </div>
-                    <div class="card-order__price">
-                        <p class="card-order__prices">$120,00</p>
-                        <img src="./images/icons/icon_close.png" alt="icon close">
+                    <div class="card-order">
+                        <div class="card-order__product">
+                            <figure class="card-order__img">
+                                <img src="https://images.unsplash.com/photo-1607034071833-18a5b64047ac?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80"
+                                    alt="Pc gamer">
+                            </figure>
+                            <p class="card-order__title">
+                                Pc Gamer
+                            </p>
+                        </div>
+                        <div class="card-order__price">
+                            <p class="card-order__prices">$120,00</p>
+                            <img src="./images/icons/icon_close.png" alt="icon close">
+                        </div>
+                    </div>
+                    <div class="card-order">
+                        <div class="card-order__product">
+                            <figure class="card-order__img">
+                                <img src="https://images.unsplash.com/photo-1607034071833-18a5b64047ac?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80"
+                                    alt="Pc gamer">
+                            </figure>
+                            <p class="card-order__title">
+                                Pc Gamer
+                            </p>
+                        </div>
+                        <div class="card-order__price">
+                            <p class="card-order__prices">$120,00</p>
+                            <img src="./images/icons/icon_close.png" alt="icon close">
+                        </div>
+                    </div>
+                    <div class="card-order">
+                        <div class="card-order__product">
+                            <figure class="card-order__img">
+                                <img src="https://images.unsplash.com/photo-1607034071833-18a5b64047ac?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80"
+                                    alt="Pc gamer">
+                            </figure>
+                            <p class="card-order__title">
+                                Pc Gamer
+                            </p>
+                        </div>
+                        <div class="card-order__price">
+                            <p class="card-order__prices">$120,00</p>
+                            <img src="./images/icons/icon_close.png" alt="icon close">
+                        </div>
+                    </div>
+                    <div class="card-order">
+                        <div class="card-order__product">
+                            <figure class="card-order__img">
+                                <img src="https://images.unsplash.com/photo-1607034071833-18a5b64047ac?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80"
+                                    alt="Pc gamer">
+                            </figure>
+                            <p class="card-order__title">
+                                Pc Gamer
+                            </p>
+                        </div>
+                        <div class="card-order__price">
+                            <p class="card-order__prices">$120,00</p>
+                            <img src="./images/icons/icon_close.png" alt="icon close">
+                        </div>
                     </div>
                 </div>
-                <div class="card-order">
-                    <div class="card-order__product">
-                        <figure class="card-order__img">
-                            <img src="https://images.unsplash.com/photo-1607034071833-18a5b64047ac?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80"
-                                alt="Pc gamer">
-                        </figure>
-                        <p class="card-order__title">
-                            Pc Gamer
+                <div class="order-info">
+                    <div class="order-info__date">
+                        <p class="order-info__date">
+                            Total
                         </p>
+
                     </div>
-                    <div class="card-order__price">
-                        <p class="card-order__prices">$120,00</p>
-                        <img src="./images/icons/icon_close.png" alt="icon close">
-                    </div>
-                </div>
-                <div class="card-order">
-                    <div class="card-order__product">
-                        <figure class="card-order__img">
-                            <img src="https://images.unsplash.com/photo-1607034071833-18a5b64047ac?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80"
-                                alt="Pc gamer">
-                        </figure>
-                        <p class="card-order__title">
-                            Pc Gamer
-                        </p>
-                    </div>
-                    <div class="card-order__price">
-                        <p class="card-order__prices">$120,00</p>
-                        <img src="./images/icons/icon_close.png" alt="icon close">
-                    </div>
-                </div>
-                <div class="card-order">
-                    <div class="card-order__product">
-                        <figure class="card-order__img">
-                            <img src="https://images.unsplash.com/photo-1607034071833-18a5b64047ac?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80"
-                                alt="Pc gamer">
-                        </figure>
-                        <p class="card-order__title">
-                            Pc Gamer
-                        </p>
-                    </div>
-                    <div class="card-order__price">
-                        <p class="card-order__prices">$120,00</p>
-                        <img src="./images/icons/icon_close.png" alt="icon close">
-                    </div>
-                </div>
-                <div class="card-order">
-                    <div class="card-order__product">
-                        <figure class="card-order__img">
-                            <img src="https://images.unsplash.com/photo-1607034071833-18a5b64047ac?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80"
-                                alt="Pc gamer">
-                        </figure>
-                        <p class="card-order__title">
-                            Pc Gamer
-                        </p>
-                    </div>
-                    <div class="card-order__price">
-                        <p class="card-order__prices">$120,00</p>
-                        <img src="./images/icons/icon_close.png" alt="icon close">
-                    </div>
-                </div>
-            </div>
-            <div class="order-info">
-                <div class="order-info__date">
-                    <p class="order-info__date">
-                        Total
+                    <p class="order-info__prices">
+                        $560.00
                     </p>
-
                 </div>
-                <p class="order-info__prices">
-                    $560.00
-                </p>
+                <button class="card-order__btn">
+                    checkout
+                </button>
             </div>
-            <button class="card-order__btn">
-                checkout
-            </button>
-        </div>
-    </aside>
+        </aside>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi libero dolore tenetur iste magni harum
+            doloremque quidem illo quod accusantium nam quisquam, maiores non dolor voluptatibus cum inventore, aut eos?
+        </p>
+    </main>
     <script src="./js/script.js"></script>
 </body>
 
