card products with js

--- a/fusion.html
+++ b/fusion.html
@@ -184,9 +184,11 @@
                 </button>
             </div>
         </aside>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi libero dolore tenetur iste magni harum
-            doloremque quidem illo quod accusantium nam quisquam, maiores non dolor voluptatibus cum inventore, aut eos?
-        </p>
+        <section class="main-container">
+            <div class="card-products" id="card-products">
+
+            </div>
+        </section>
     </main>
     <script src="./js/script.js"></script>
 </body>
