--- a/fusion.html
+++ b/fusion.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./images/logos/logo_yard_sale.svg" type="image/x-icon">
     <title>Shop Practice Frontend</title>
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="./css/media.css">
@@ -182,6 +183,26 @@
                 <button class="card-order__btn">
                     checkout
                 </button>
+            </div>
+        </aside>
+        <aside class="detail-content">
+            <div class="detail-product">
+                <div class="detail-product__close">
+                    <img src="./images/icons/icon_close.png" alt="icon close">
+                </div>
+                <img class="detail-content__product"
+                    src="https://img.freepik.com/vector-premium/fresco-astronauta-relajandose-sentado-ilustracion-vector-dibujos-animados-silla-juego_509778-27.jpg?w=740"
+                    alt="silla gamer">
+                <div class="detail-product__info">
+                    <p class="detail-product__prices">$ 360</p>
+                    <h2 class="detail-product__title">Silla gamer</h2>
+                    <p class="detail-product__description">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                        Tenetur, similique.</p>
+                    <button class="detail-product__btn">
+                        <img src="./images/icons/bt_add_to_cart.svg" alt="icon add to cart">
+                        Add to cart
+                    </button>
+                </div>
             </div>
         </aside>
         <section class="main-container">
